--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,34 @@
     <artifactId>junit</artifactId>
     <version>4.11</version> <!-- Or whatever JUnit you're using. -->
 	</dependency>
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.9.1.2184</version>
+        </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.8</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>test</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
 </dependencies>
 
 <distributionManagement>
@@ -24,6 +52,14 @@
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
+
+	<properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <sonar.organization>your-org-key</sonar.organization>
+    <sonar.projectKey>your-project-key</sonar.projectKey>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
   
 </project>
 
